--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2021.10.8
 cffi==1.15.0
 cryptography==36.0.0
 Django==3.2.9
+django-apscheduler==0.6.0
 django-cors-headers==3.10.0
 django-dotenv==1.4.2
 gunicorn==20.1.0
