--- a/requirements.txt
+++ b/requirements.txt
@@ -6,22 +6,40 @@ beautifulsoup4==4.10.0
 bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.9
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==36.0.0
+DateTime==4.3
+Deprecated==1.2.13
 Django==3.2.9
 django-apscheduler==0.6.0
 django-cors-headers==3.10.0
 django-dotenv==1.4.2
+django-rest-swagger==2.1.2
+djangorestframework==3.12.4
 gunicorn==20.1.0
 h11==0.12.0
 idna==3.3
+itypes==1.2.0
+Jinja2==3.0.3
 lxml==4.6.4
+MarkupSafe==2.0.1
+multitasking==0.0.10
 mysqlclient==2.1.0
+numpy==1.21.4
+openapi-codec==1.3.2
 outcome==1.1.0
+pandas==1.3.4
 pycparser==2.21
+pykrx==1.0.29
 pyOpenSSL==21.0.0
+python-dateutil==2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
+requests==2.26.0
 selenium==4.1.0
+simplejson==3.17.6
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
@@ -31,6 +49,11 @@ trio==0.19.0
 trio-websocket==0.9.2
 tzdata==2021.5
 tzlocal==4.1
+uritemplate==4.1.1
 urllib3==1.26.7
 whitenoise==5.3.0
+wrapt==1.13.3
 wsproto==1.0.0
+xlrd==2.0.1
+yfinance==0.1.67
+zope.interface==5.4.0
