--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Django==3.2.9
 django-apscheduler==0.6.0
 django-cors-headers==3.10.0
 django-dotenv==1.4.2
+django-log-viewer==1.1.4
 django-rest-swagger==2.1.2
 djangorestframework==3.12.4
 gunicorn==20.1.0
