--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-dotenv==1.4.2
 django-log-viewer==1.1.4
 django-rest-swagger==2.1.2
 djangorestframework==3.12.4
+finance-datareader==0.9.31
 gunicorn==20.1.0
 h11==0.12.0
 idna==3.3
@@ -39,6 +40,7 @@ python-dateutil==2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
+requests-file==1.5.1
 selenium==4.1.0
 simplejson==3.17.6
 six==1.16.0
@@ -46,6 +48,7 @@ sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
 sqlparse==0.4.2
+tqdm==4.62.3
 trio==0.19.0
 trio-websocket==0.9.2
 tzdata==2021.5
