--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-cors-headers==3.10.0
 django-dotenv==1.4.2
 django-log-viewer==1.1.4
 django-rest-swagger==2.1.2
+django-slowtests==1.1.1
 djangorestframework==3.12.4
 finance-datareader==0.9.31
 gunicorn==20.1.0
