--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==2.0.9
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==36.0.0
+cycler==0.11.0
 DateTime==4.3
 Deprecated==1.2.13
 Django==3.2.9
@@ -21,34 +22,45 @@ django-rest-swagger==2.1.2
 django-slowtests==1.1.1
 djangorestframework==3.12.4
 finance-datareader==0.9.31
+fonttools==4.28.5
 gunicorn==20.1.0
 h11==0.12.0
 idna==3.3
 itypes==1.2.0
 Jinja2==3.0.3
+joblib==1.1.0
+kiwisolver==1.3.2
 lxml==4.6.4
 MarkupSafe==2.0.1
+matplotlib==3.5.1
 multitasking==0.0.10
 mysqlclient==2.1.0
 numpy==1.21.4
 openapi-codec==1.3.2
 outcome==1.1.0
+packaging==21.3
 pandas==1.3.4
+Pillow==8.4.0
 pycparser==2.21
 pykrx==1.0.29
 pyOpenSSL==21.0.0
+pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
 requests-file==1.5.1
+scikit-learn==1.0.1
+scipy==1.7.3
 selenium==4.1.0
 simplejson==3.17.6
 six==1.16.0
+sklearn==0.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
 sqlparse==0.4.2
+threadpoolctl==3.0.0
 tqdm==4.62.3
 trio==0.19.0
 trio-websocket==0.9.2
@@ -59,6 +71,7 @@ urllib3==1.26.7
 whitenoise==5.3.0
 wrapt==1.13.3
 wsproto==1.0.0
+xgboost==1.5.1
 xlrd==2.0.1
 yfinance==0.1.67
 zope.interface==5.4.0
