--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.9
+convertdate==2.3.2
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==36.0.0
@@ -25,11 +26,14 @@ finance-datareader==0.9.31
 fonttools==4.28.5
 gunicorn==20.1.0
 h11==0.12.0
+hijri-converter==2.2.2
 idna==3.3
 itypes==1.2.0
 Jinja2==3.0.3
 joblib==1.1.0
 kiwisolver==1.3.2
+korean-lunar-calendar==0.2.1
+lunardate==0.2.0
 lxml==4.6.4
 MarkupSafe==2.0.1
 matplotlib==3.5.1
@@ -43,9 +47,11 @@ pandas==1.3.4
 Pillow==8.4.0
 pycparser==2.21
 pykrx==1.0.29
+PyMeeus==0.5.11
 pyOpenSSL==21.0.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
+pytimekr==0.1.0
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
