--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ DateTime==4.3
 Deprecated==1.2.13
 Django==3.2.9
 django-apscheduler==0.6.0
+django-bulk-update==2.2.0
 django-cors-headers==3.10.0
 django-dotenv==1.4.2
 django-log-viewer==1.1.4
