--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,14 @@ cycler==0.11.0
 DateTime==4.3
 Deprecated==1.2.13
 Django==3.2.9
+django-admin-filter==0.7
+django-admin-rangefilter==0.8.3
 django-apscheduler==0.6.0
 django-bootstrap4==21.2
 django-bulk-update==2.2.0
 django-cors-headers==3.10.0
 django-dotenv==1.4.2
+django-filter==21.1
 django-log-viewer==1.1.4
 django-rest-swagger==2.1.2
 django-slowtests==1.1.1
