--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 APScheduler==3.8.1
+arrow==1.2.1
 asgiref==3.4.1
 async-generator==1.10
 attrs==21.2.0
 beautifulsoup4==4.10.0
+binaryornot==0.4.4
 bs4==0.0.1
 certifi==2021.10.8
 cffi==1.15.0
+chardet==4.0.0
 charset-normalizer==2.0.9
+click==8.0.3
 convertdate==2.3.2
+cookiecutter==1.7.3
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==36.0.0
@@ -26,6 +31,7 @@ django-filter==21.1
 django-log-viewer==1.1.4
 django-rest-swagger==2.1.2
 django-slowtests==1.1.1
+django-tailwind==3.0.1
 djangorestframework==3.12.4
 finance-datareader==0.9.31
 fonttools==4.28.5
@@ -35,6 +41,7 @@ hijri-converter==2.2.2
 idna==3.3
 itypes==1.2.0
 Jinja2==3.0.3
+jinja2-time==0.2.0
 joblib==1.1.0
 kiwisolver==1.3.2
 korean-lunar-calendar==0.2.1
@@ -50,12 +57,14 @@ outcome==1.1.0
 packaging==21.3
 pandas==1.3.4
 Pillow==8.4.0
+poyo==0.5.0
 pycparser==2.21
 pykrx==1.0.31
 PyMeeus==0.5.11
 pyOpenSSL==21.0.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
+python-slugify==5.0.2
 pytimekr==0.1.0
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
@@ -71,6 +80,7 @@ sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
 sqlparse==0.4.2
+text-unidecode==1.3
 threadpoolctl==3.0.0
 tqdm==4.62.3
 trio==0.19.0
