--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ django-bulk-update==2.2.0
 django-cors-headers==3.10.0
 django-dotenv==1.4.2
 django-filter==21.1
+django-i18n==1.0.4
 django-log-viewer==1.1.4
 django-rest-swagger==2.1.2
 django-slowtests==1.1.1
@@ -67,6 +68,7 @@ python-slugify==5.0.2
 pytimekr==0.1.0
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
 requests==2.26.0
 requests-file==1.5.1
 scikit-learn==1.0.1
