--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ itypes==1.2.0
 Jinja2==3.0.3
 jinja2-time==0.2.0
 joblib==1.1.0
+keras==2.7.0
 kiwisolver==1.3.2
 korean-lunar-calendar==0.2.1
 lunardate==0.2.0
